WexGit/Wex_DX/force-app/main/default/objects/Beneficial_Owner_Settings__c/Beneficial_Owner_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Beneficial Owner Settings</label>
</CustomObject>