WexGit/Wex_DX/force-app/main/default/objects/Beneficial_Owner_Settings__c/fields/Confirmation_Email_FR_Generic__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_FR_Generic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmation Email FR - Generic</label>
    <length>25</length>
    <type>Text</type>
</CustomField>