WexGit/Wex_DX/force-app/main/default/objects/Beneficial_Owner_Settings__c/fields/Enable_Upfront_Collection__c.field-meta.xml
<CustomField>
    <fullName>Enable_Upfront_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Upfront Collection</label>
    <type>Checkbox</type>
</CustomField>