WexGit/Wex_DX/force-app/main/default/objects/Beneficial_Owner_Settings__c/fields/Send_Form_E_mail_Template_FR__c.field-meta.xml
<CustomField>
    <fullName>Send_Form_E_mail_Template_FR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send Form E-mail Template - FR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>